// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Font Family 1`] = `
Object {
  "fontFamily": "ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,\\"Liberation Mono\\",\\"Courier New\\",monospace",
}
`;

exports[`Font Family 2`] = `
Object {
  "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
}
`;

exports[`Font Family 3`] = `
Object {
  "fontFamily": "ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
}
`;

exports[`Font Size 1`] = `
Object {
  "fontSize": "0.75rem",
  "lineHeight": "1rem",
}
`;

exports[`Font Size 2`] = `
Object {
  "fontSize": "1.5rem",
  "lineHeight": "2rem",
}
`;

exports[`Font Size 3`] = `
Object {
  "fontSize": "1rem",
  "lineHeight": "1.5rem",
}
`;

exports[`Font Size 4`] = `
Object {
  "fontSize": "1.125rem",
  "lineHeight": "1.75rem",
}
`;

exports[`Font Size With Different Config 1`] = `
Object {
  "fontSize": "0.75rem",
  "lineHeight": "1rem",
}
`;

exports[`Font Size With Different Config 2`] = `
Object {
  "fontSize": "0.875rem",
}
`;

exports[`Font Size With Different Config 3`] = `
Object {
  "fontSize": "1rem",
  "letterSpacing": "1px",
  "lineHeight": "1.25rem",
}
`;

exports[`Font Style and Font Smoothing 1`] = `
Object {
  "fontStyle": "italic",
}
`;

exports[`Font Style and Font Smoothing 2`] = `
Object {
  "fontStyle": "normal",
}
`;

exports[`Font Style and Font Smoothing 3`] = `
Object {
  "-moz-osx-font-smoothing": "grayscale",
  "-webkit-font-smoothing": "antialiased",
}
`;

exports[`Font Style and Font Smoothing 4`] = `
Object {
  "-moz-osx-font-smoothing": "auto",
  "-webkit-font-smoothing": "auto",
}
`;

exports[`Font Weight 1`] = `
Object {
  "fontWeight": "700",
}
`;

exports[`Font Weight 2`] = `
Object {
  "fontWeight": "500",
}
`;

exports[`Hyphens 1`] = `
Object {
  "-ms-hyphens": "manual",
  "-webkit-hyphens": "manual",
  "hyphens": "manual",
}
`;

exports[`Hyphens 2`] = `
Object {
  "-ms-hyphens": "auto",
  "-webkit-hyphens": "auto",
  "hyphens": "auto",
}
`;

exports[`Letter Spacing 1`] = `
Object {
  "letterSpacing": "-0.025em",
}
`;

exports[`Letter Spacing 2`] = `
Object {
  "letterSpacing": "0.05em",
}
`;

exports[`Line Height 1`] = `
Object {
  "lineHeight": "1rem",
}
`;

exports[`Line Height 2`] = `
Object {
  "lineHeight": "1.5",
}
`;

exports[`Line Height 3`] = `
Object {
  "lineHeight": "1.625",
}
`;

exports[`Tab Size 1`] = `
Object {
  "-moz-tab-size": "4",
  "-o-tab-size": "4",
  "tabSize": "4",
}
`;

exports[`Tab Size 2`] = `
Object {
  "-moz-tab-size": "2",
  "-o-tab-size": "2",
  "tabSize": "2",
}
`;

exports[`Text Alignment 1`] = `
Object {
  "textAlign": "left",
}
`;

exports[`Text Alignment 2`] = `
Object {
  "textAlign": "justify",
}
`;
